--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "sg-kinect-constants",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Constans of kinect",
   "main": "lib",
+  "browser": "browser",
   "scripts": {
-    "test": "./ci/test.js"
+    "test": "./ci/test.js",
+    "prepublish": "./ci/build.js && ./ci/browser.js"
   },
   "repository": "realglobe-Inc/sg-kinect-constants",
   "keywords": [
@@ -25,15 +27,16 @@
     "co": "^4.6.0"
   },
   "devDependencies": {
-    "ape-covering": "^3.0.1",
+    "ape-compiling": "^4.2.0",
+    "ape-covering": "^3.0.3",
     "ape-releasing": "^3.1.1",
     "ape-reporting": "^3.0.1",
-    "ape-tasking": "^3.1.2",
-    "ape-testing": "^3.0.1",
-    "ape-tmpl": "^5.0.1",
+    "ape-tasking": "^4.0.1",
+    "ape-testing": "^4.0.0",
+    "ape-tmpl": "^5.0.2",
     "ape-updating": "^3.0.2",
-    "coz": "^5.1.5",
-    "injectmock": "^1.1.3"
+    "coz": "^6.0.2",
+    "injectmock": "^2.0.0"
   },
   "engines": {
     "node": ">=6",
