--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '6'
 before_install:
-- npm install istanbul mocha -g
+- npm install istanbul mocha babel-preset-es2015 -g
 install:
 - npm install
 before_script:
