--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 node_js:
 - '6'
 before_install:
-- npm install istanbul mocha babel-preset-es2015 -g
+- npm install istanbul mocha babel-cli -g
+- npm install babel-preset-es2015 -D
 install:
 - npm install
-before_script:
-- npm link .
 script:
 - ./ci/build.js
 - ./ci/test.js
